# sms-haskell

./: .gitignore  Main.hs  OAuth2.hs  Procfile  README.md  RPCService.hs  Routing.hs  Service.hs  Types.hs  app.json  sms-haskell.cabal  sms.idl  stylize.sh
.halcyon/: cabal-version  constraints
Google/: UserInfo.hs
Google/OAuth2/: APIClient.hs  AuthFlow.hs  HTTPClient.hs  UserInfo.hs
src/: Config.hs  Controller.hs  Controllers.hs  Main.hs  Persistence.hs  ProjectService.hs  RPC.hs  Routes.hs  Service.hs  Types.hs
src/Barrister/IDL/: Enums.hs
src/Barrister/IDL/Structs/: CreatePosition.hs  CreatePositionProperty.hs  LoginInfo.hs  Position.hs  PositionField.hs  PositionProperty.hs  Project.hs  ProjectAccess.hs  User.hs  UserProject.hs
src/Database/Tables/: Login.hs  ProjectAccess.hs  User.hs
src/Google/OAuth2/: APIClient.hs  AuthFlow.hs  UserInfo.hs
src/Google/OAuth2/Types/: AuthFlow.hs  AuthTokens.hs  GoogleUserInfo.hs
src/Types/: JSONDecodeError.hs  RPC.hs  WebAppError.hs
