name:               sms-haskell
version:            1.0
build-type:         Simple
cabal-version:      >= 1.22

executable sms-haskell
  main-is:            Main.hs
  default-language:   Haskell2010
  build-depends:      base,
                      json-rpc-server,
                      scotty,
                      aeson