name:               sms-haskell
version:            1.0
build-type:         Simple
cabal-version:      >= 1.22

executable sms-haskell
  hs-source-dirs:     src
  main-is:            Main.hs
  default-language:   Haskell2010
  build-depends:      aeson,
                      base,
                      bytestring,
                      errors,
                      http-client,
                      http-conduit,
                      http-types,
                      json-rpc-server,
                      mtl,
                      mysql,
                      mysql-simple,
                      scotty,
                      string-conversions,
                      stylish-haskell,
                      text,
                      time,
                      transformers,
                      url,
                      wai,
                      wai-extra
